[package]
name = "quickmath"
version = "0.2.3"
edition = "2021"
authors = [ "Valerie Wolfe <sleeplessval@gmail.com>" ]
description = "A quick command-line math evaluator."
homepage = "https://git.vwolfe.io/valerie/qm"
repository = "https://git.vwolfe.io/valerie/qm"
license = "MIT"

[[bin]]
name = "qm"
path = "src/main.rs"

[dependencies]
evalexpr = "11.0.0"
termion = "1.5.6"

[profile.release]
opt-level = 's'
codegen-units = 1
debug = false
lto = true
panic = "abort"
strip = "symbols"

